made the inbox model work
